--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "devDependencies": {
     "gulp": "*",
     "gulp-sass": "*",
-    "gulp-livereload": "*"
+    "gulp-livereload": "*",
+    "gulp-sourcemaps": "*"
   }
 }
