--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "gulp": "*",
     "gulp-sass": "*",
     "gulp-livereload": "*",
-    "gulp-sourcemaps": "*"
+    "gulp-sourcemaps": "*",
+    "browser-sync": "*"
   }
 }
