add browserify, next is es6!

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ php:
   dockerfile: php-Dockerfile
   build: .
   environment:
-    XDEBUG_CONFIG: remote_host=php
+    XDEBUG_CONFIG: remote_host=172.17.42.1
   links:
     - mysql
   ports:
