add es2015 and gulp file little refactoredű

--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "gulp-sourcemaps": "*",
     "browser-sync": "*",
     "browserify": "*",
+    "babelify": "*",
+    "babel-preset-es2015": "*",
     "vinyl-source-stream": "*",
     "vinyl-transform": "*"
   }
